--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "native-base": "^2.13.12",
     "react": "16.11.0",
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
+    "react-native-router-flux": "^4.2.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
