--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^2.3.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.13",
+    "axios": "^0.19.2",
     "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-modal-datetime-picker": "^8.6.0",
+    "react-native-modal-select-list": "^1.0.0",
     "react-native-reanimated": "^1.8.0",
-    "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
     "react-redux": "^7.2.0",
