--- a/buyticket_plain/package.json
+++ b/buyticket_plain/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^2.3.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^7.2.0",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.13",
     "axios": "^0.19.2",
